test/users/ssridhar/atomic/errors/test_fail_atomic_writeln.chpl
atomic writeln("This should fail");